@@ -13,7 +13,9 @@ back into STEM.
 6/27/23: Changed UI Automation calls used to change aperture size, which fixed
 problems on at least one Windows 10 scope.
 
-6/27/23: Added DummyInstance property, changed program startup so it works.
+6/27/23: Added DummyInstance property, changed program startup so it has same
+effect as /DUMMY argument, added message box when trying to start a second
+non-DUMMY instance.
 
 6/27/23: Made script stopped with Python error be properly marked as not
 completed, so Acquire at Items keeps Acquire flag on.
